Add schedule id to responses
